fix path-lstm.